src/test/deca/syntax/invalid/7_decl_var_sans_equal.deca
// Description:
//    tests de non-terminal 'decl_var' ne manque le 'equal'.
//
// Resultats:
//    Ligne 10 : Erreur de syntaxe.
//
// Historique:
//    cree le 01/01/2023

// Un exemple de programme Deca
{
    int a 6;

}